<resources>
    <string name="app_name">CullinaryConnect</string>
    <string name="splash_blob" />
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">password</string>
    <string name="or">or</string>
    <string name="signup">SignUp</string>
    <string name="if_you_don_t_have_an_account_click_here">if you don\'t have an account, click here</string>
    <string name="v_1_0">v 1.0</string>
    <string name="sign_In">Sign Up</string>
    <string name="did_you_have_an_account_click_here">Did you have an account? click here</string>
    <string name="name">name</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_profile">Notifications</string>
    <string name="from_our_kitchen_to_yours_nexplore_cook_enjoy">From Our Kitchen to Yours: \nExplore, Cook, Enjoy!</string>
    <string name="from_our_kitchen_to_yours_explore_cook_enjoy">From Our Kitchen to Yours: Explore, Cook, Enjoy!</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="your_favourite_meal_here">Your Favourite Meal Here</string>
    <string name="search_your_favourite_recipe">Search your favourite Recipe</string>
    <string name="title_home" />
    <string name="menu_category">\n</string>
    <string name="menu_profile" />
    <string name="profile">profile</string>
    <string name="category">category</string>
    <string name="home">home</string>
    <string name="Profile">Profile</string>
    <string name="Category">Category</string>
    <string name="Home">Home</string>
    <string name="see_more">See More</string>
    <string name="take_your_taste_buds_non_a_flavor_journey_with_us">Take your taste buds\non a flavor journey with us</string>
    <string name="developer_email">cullinary@gmail.com</string>
    <string name="user_name">User Name</string>
    <string name="share_your_nmasterpiece_with_the_world">Share your magic\nmasterpiece with the World</string>
    <string name="satisfy_your_cravings_with_just_a_tap">satisfy your cravings with just a tap</string>
    <string name="satisfy_your_cravings_nwith_just_a_tap_recipe_app">Satisfy your cravings\nwith just a tap - Recipe App</string>
    <string name="share_app">share App With Friends and Family</string>
    <string name="rate_app">Rate us On Play Store</string>
    <string name="view_more_apps">View More Apps developed by us</string>
    <string name="send_feedback">Share your Feedback to improve our app</string>
    <string name="privacy_policy">Visit our Privacy Policy</string>
    <string name="developer_name">Jaklon</string>
    <string name="developer_id">the_jaklon</string>
    <string name="login_as_guest">Login As Guest</string>
    <string name="sastify_your_ncraving_with_just_a_tap">sastify your\ncraving with just a tap</string>
    <string name="favorites">favourites</string>
    <string name="Explore_your_journey_taste">Explore Your Journey Taste</string>
    <string name="popular_cuisine_in_the_world">Popular Cuisine in The World</string>
</resources>