<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.recipesapp.fragment.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home" />

    <!-- Tambahkan destinasi lainnya di sini -->

    <fragment
        android:id="@+id/navigation_category"
        android:name="com.example.recipesapp.fragment.CategoriesFragment"
        android:label="@string/menu_category"
        tools:layout="@layout/fragment_category" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.recipesapp.fragment.ProfileFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/navigation_favorite"
        android:name="com.example.recipesapp.fragment.FavouritesFragment"
        android:label="fragment_favourites"
        tools:layout="@layout/fragment_favourites"/>

    <!-- Anda juga dapat menambahkan nested graph atau global actions jika diperlukan -->
</navigation>